--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -52,6 +52,11 @@ table {
 	margin-bottom: 35px;
 }
 
+#resources {
+	margin-top: 20px;
+	margin-left: 15px;
+}
+
 p {
 	margin-bottom: 0;
 	font-weight: 600;
