--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -56,6 +56,12 @@ form {
     box-shadow: 0 1px 0 0 #4db6ac;
 }
 
+/* valid color */
+#outfit-input-field input[type=text].valid {
+   	border-bottom: 1px solid #009688;
+    box-shadow: 0 1px 0 0 #009688;
+}
+
 .btn {
 	border-radius: 3px;
 }
