--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,18 +14,18 @@ body {
 }
 
 #loading {
-	position:relative;
-}
+	position:absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -30px;
+	margin-left: -50px;
 
-#loading-message {
-	margin-bottom: 20px;
-	display: inline-block;
 }
 
 #loading-icon {
 	position: absolute;
 	top: -20px;
-	left: -55px;
+	left: -60px;
 }
 
 
